[package]
name = "libymfm"
version = "0.1.0"
authors = ["h1romas4 <h1romas4@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "WebAssembly build of the ymfm Yamaha FM sound cores library"
repository = "https://github.com/h1romas4/libymfm.wasm"
license = "GPL-2"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
flate2 = "1.0"
nom = "5"
serde = "1"
serde_json = "1"
serde_derive = "1"
array-macro = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[profile.release]
opt-level = "s"
