[package]
name = "libymfm"
version = "0.11.0"
authors = ["Hiromasa Tanaka <h1romas4@gmail.com>"]
edition = "2021"
rust-version = "1.61"
build = "build.rs"
description = "WebAssembly build of the ymfm Yamaha FM sound cores library"
repository = "https://github.com/h1romas4/libymfm.wasm"
license = "BSD-3-Clause"

[lib]
# https://github.com/rust-lang/rust/pull/79997
# https://github.com/bazelbuild/rules_rust/issues/771
# https://github.com/rust-lang/rfcs/pull/3180/files
crate-type = ["bin"]
# crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[features]
default = ["basic"]
basic = ["console_error_panic_hook"]
bindgen = ["console_error_panic_hook"]

[dependencies]
flate2 = "1.0"
nom = "5"
serde = "1"
serde_json = "1"
serde_derive = "1"
array-macro = "2"
approx_eq = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
